unpackaged/main/default/objects/Account/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <externalId>true</externalId>
    <label>Account Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>