unpackaged/main/default/objects/Account/fields/Account_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_External_ID__c</fullName>
    <description>T1 CRM External ID</description>
    <externalId>true</externalId>
    <label>Account External ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>