unpackaged/main/default/objects/Account/fields/Account_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Account_Last_Activity__c</fullName>
    <formula>LastActivityDate</formula>
    <label>Account Last Activity</label>
    <type>Date</type>
</CustomField>