unpackaged/main/default/objects/Account/fields/Account_Status_Customer__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Customer__c</fullName>
    <formula>TEXT(Account_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status Customer</label>
    <type>Text</type>
</CustomField>