unpackaged/main/default/objects/Account/fields/Account_Status_indicator__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_indicator__c</fullName>
    <formula>IMAGE( 
CASE( Account_Status__c , &quot;Paid&quot;, &quot;/resource/Committed_To_Pay&quot;,&quot;Committed to Pay&quot;, &quot;/resource/Committed_To_Pay&quot;, &quot;No Commitment / No Issue&quot;, &quot;/resource/No_Issue&quot;, &quot;Overdue&quot;,&quot;/resource/Overdue&quot;, &quot;Remediation&quot;, &quot;/resource/Remediation&quot;, 
&quot;Stop Support&quot;, &quot;/resource/Stop_Support&quot;,&quot;&quot;),&quot;&quot;,20,100)</formula>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>