unpackaged/main/default/objects/Account/fields/Account_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Notes__c</fullName>
    <description>Updated by TechOne Direct Only</description>
    <inlineHelpText>Updated by TechOne Direct Only</inlineHelpText>
    <label>z_Account Status Notes</label>
    <type>TextArea</type>
</CustomField>