unpackaged/main/default/objects/Account/fields/Account_Vision__c.field-meta.xml
<CustomField>
    <fullName>Account_Vision__c</fullName>
    <label>Account Vision</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>