unpackaged/main/default/objects/Account/fields/Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Acquisition__c</fullName>
    <description>Acquisition Customer</description>
    <inlineHelpText>Acquisition Customer. Please also select TechOne if it is a T1 existing customer.</inlineHelpText>
    <label>Acquisition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>DMS/CHARTIS</fullName>
            </value>
            <value>
                <fullName>ICON</fullName>
            </value>
            <value>
                <fullName>TechOne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>