unpackaged/main/default/objects/Account/fields/Alternate_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Name_2__c</fullName>
    <label>Alternate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>