unpackaged/main/default/objects/Account/fields/AMS__c.field-meta.xml
<CustomField>
    <fullName>AMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AMS</label>
    <type>Checkbox</type>
</CustomField>