unpackaged/main/default/objects/Account/fields/AMS_Program_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>AMS_Program_Exceeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AMS Program Exceeded</label>
    <type>Checkbox</type>
</CustomField>