unpackaged/main/default/objects/Account/fields/ARR_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>ARR_Last_Updated_Date__c</fullName>
    <description>ARR Last Updated Date</description>
    <label>ARR Last Updated Date</label>
    <type>Date</type>
</CustomField>