unpackaged/main/default/objects/Account/fields/ARR_Movement__c.field-meta.xml
<CustomField>
    <fullName>ARR_Movement__c</fullName>
    <formula>Total_ASM__c + Total_Cloud__c + Total_Licence__c - FY_Opening_bARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>bARR Movement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>