unpackaged/main/default/objects/Account/fields/Billing_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Billing_Relationship__c</fullName>
    <label>Billing Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To the Parent</fullName>
            </value>
            <value>
                <fullName>To the Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>