unpackaged/main/default/objects/Account/fields/Classic_URL__c.field-meta.xml
<CustomField>
    <fullName>Classic_URL__c</fullName>
    <formula>HYPERLINK(&#39;https://technologyone.my.salesforce.com/&#39;+Id,&#39;https://technologyone.my.salesforce.com/&#39;+Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classic URL</label>
    <type>Text</type>
</CustomField>