unpackaged/main/default/objects/Account/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key Account</fullName>
            </value>
            <value>
                <fullName>General Account</fullName>
            </value>
            <value>
                <fullName>Contact Only Account</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Moving to other vendor / Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>