unpackaged/main/default/objects/Account/fields/Cloud_Hosting__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Hosting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>(This is Perpetual Licence but hosted in T1 Cloud</inlineHelpText>
    <label>Cloud Hosting</label>
    <type>Checkbox</type>
</CustomField>