unpackaged/main/default/objects/Account/fields/Cloud_Status__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Status__c</fullName>
    <label>Cloud Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>In Transition</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>