unpackaged/main/default/objects/Account/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Used by Pricing team</inlineHelpText>
    <label>Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>