unpackaged/main/default/objects/Account/fields/Company_Profile__c.field-meta.xml
<CustomField>
    <fullName>Company_Profile__c</fullName>
    <inlineHelpText>Should be used to provide an overview of the company, their operations and industry. Also, any changes in structure or investment etc.</inlineHelpText>
    <label>Company Profile and Industry</label>
    <length>1500</length>
    <type>Html</type>
</CustomField>