unpackaged/main/default/objects/Account/fields/Contact_Level__c.field-meta.xml
<CustomField>
    <fullName>Contact_Level__c</fullName>
    <description>Used by Techone Direct</description>
    <inlineHelpText>Used by Techone Direct Only</inlineHelpText>
    <label>z_Contact Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account at Risk</fullName>
            </value>
            <value>
                <fullName>Building Relationship</fullName>
            </value>
            <value>
                <fullName>Cancelled/No Account</fullName>
            </value>
            <value>
                <fullName>No Action</fullName>
            </value>
            <value>
                <fullName>No Contact</fullName>
            </value>
            <value>
                <fullName>Opportunity Dev</fullName>
            </value>
            <value>
                <fullName>Problem Solving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>