unpackaged/main/default/objects/Account/fields/Contract_Clause__c.field-meta.xml
<CustomField>
    <fullName>Contract_Clause__c</fullName>
    <inlineHelpText>Used by Pricing team</inlineHelpText>
    <label>z_ELA Contract Clause</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>