unpackaged/main/default/objects/Account/fields/CountryArea__c.field-meta.xml
<CustomField>
    <fullName>CountryArea__c</fullName>
    <label>Country/Area</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Pacific</fullName>
            </value>
            <value>
                <fullName>Distributors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>