unpackaged/main/default/objects/Account/fields/CPQ_Migration_Status__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Migration_Status__c</fullName>
    <description>The state, on an Account, related to the migration of data from SRS format to CPQ format</description>
    <label>CPQ Migration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
                <default>true</default>
                <label>Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>