unpackaged/main/default/objects/Account/fields/Default_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Term__c</fullName>
    <label>Default Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__PaymentTerm</valueSetName>
    </valueSet>
</CustomField>