unpackaged/main/default/objects/Account/fields/DNCR__c.field-meta.xml
<CustomField>
    <fullName>DNCR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the phone number attached to this Account is on the Australian Do Not Call Register (DNCR).

Numbers washed monthly.</inlineHelpText>
    <label>DNCR</label>
    <type>Checkbox</type>
</CustomField>