unpackaged/main/default/objects/Account/fields/EFTS__c.field-meta.xml
<CustomField>
    <fullName>EFTS__c</fullName>
    <inlineHelpText>Equivalent Full Time Student</inlineHelpText>
    <label>EFT Student</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>