unpackaged/main/default/objects/Account/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <description>Used to lookup the account for a given email address. eg which Account should this Contact/user be associated with?</description>
    <inlineHelpText>Add multiple domains if necessary with each one separated by a single space. Domain must exclude the @ symbol. eg technologyonecorp.com or abc.net.au, not @technologyonecorp.com etc</inlineHelpText>
    <label>Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>