unpackaged/main/default/objects/Account/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <description>Updated by TechOne Direct Only</description>
    <inlineHelpText>Updated by TechOne Direct Only</inlineHelpText>
    <label>z_Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C Level</fullName>
            </value>
            <value>
                <fullName>Multipoint</fullName>
            </value>
            <value>
                <fullName>No Contact</fullName>
            </value>
            <value>
                <fullName>Single Point</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>