unpackaged/main/default/objects/Account/fields/Enterprise_Licence__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Licence__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please DO NOT send ASM Listing to customer. Refer query to T1LicenceCodes.</inlineHelpText>
    <label>Enterprise Licence</label>
    <type>Checkbox</type>
</CustomField>