unpackaged/main/default/objects/Account/fields/Enterprise_License_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_License_Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to an Enterprise Price Book</description>
    <inlineHelpText>This will only have a value if an Enterprise License Pricebook applies for this account.</inlineHelpText>
    <label>Enterprise License Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>