unpackaged/main/default/objects/Account/fields/Enterprise_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Review_Date__c</fullName>
    <inlineHelpText>Used by Pricing team</inlineHelpText>
    <label>z_Enterprise Review Date</label>
    <type>Date</type>
</CustomField>