unpackaged/main/default/objects/Account/fields/Entitlements_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Entitlements_Relationship__c</fullName>
    <label>Entitlements Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Children own Entitlements</fullName>
            </value>
            <value>
                <fullName>Children own Saas Platform only (all entitlements in parent)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>