unpackaged/main/default/objects/Account/fields/Estimated_Daily_Travel_Charge__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Daily_Travel_Charge__c</fullName>
    <description>Estimated Daily Travel Charge to Client</description>
    <label>Estimated Daily Travel Charge</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>