unpackaged/main/default/objects/Account/fields/Evolve_Rego_Count__c.field-meta.xml
<CustomField>
    <fullName>Evolve_Rego_Count__c</fullName>
    <description>Evolve Rego Count</description>
    <inlineHelpText>Evolve Rego Count</inlineHelpText>
    <label>Evolve Rego Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>