unpackaged/main/default/objects/Account/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <description>Financial Year of the Company.</description>
    <label>Financial Year</label>
    <length>100</length>
    <type>Text</type>
</CustomField>