unpackaged/main/default/objects/Account/fields/FY_Opening_bARR__c.field-meta.xml
<CustomField>
    <fullName>FY_Opening_bARR__c</fullName>
    <description>FY Opening bARR</description>
    <label>FY Opening bARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>