unpackaged/main/default/objects/Account/fields/Goal_1__c.field-meta.xml
<CustomField>
    <fullName>Goal_1__c</fullName>
    <label>Goal 1</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>