unpackaged/main/default/objects/Account/fields/Goal_2__c.field-meta.xml
<CustomField>
    <fullName>Goal_2__c</fullName>
    <label>Goal 2</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>