unpackaged/main/default/objects/Account/fields/Goal_3__c.field-meta.xml
<CustomField>
    <fullName>Goal_3__c</fullName>
    <label>Goal 3</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>