unpackaged/main/default/objects/Account/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <formula>CASE( Sub_group__c , 
&quot;Queensland&quot;, &quot;Top Three&quot;, 
&quot;New South Wales&quot;, &quot;Top Three&quot;, 
&quot;Victoria&quot;, &quot;Top Three&quot;, 
&quot;Western Australia&quot;, &quot;Rest of Australia&quot;,
&quot;South Australia&quot;, &quot;Rest of Australia&quot;,
&quot;Northern Territory&quot;, &quot;Rest of Australia&quot;,
&quot;ACT&quot;, &quot;Rest of Australia&quot;,
&quot;Tasmania&quot;,  &quot;Rest of Australia&quot;,
&quot;New Zealand North&quot;, &quot;New Zealand&quot;,
&quot;New Zealand South&quot;, &quot;New Zealand&quot;,
&quot;Asia&quot;, &quot;International&quot;,
&quot;Pacific&quot;, &quot;International&quot;,
&quot;Distributors&quot;, &quot;International&quot;,
&quot;United Kingdom - North&quot;, &quot;United Kingdom&quot;,
&quot;United Kingdom - South&quot;, &quot;United Kingdom&quot;,
&quot;United Kingdom - Central&quot;, &quot;United Kingdom&quot;,
&quot;Other&quot;)</formula>
    <label>z_Group</label>
    <type>Text</type>
</CustomField>