unpackaged/main/default/objects/Account/fields/HQ_and_Locations__c.field-meta.xml
<CustomField>
    <fullName>HQ_and_Locations__c</fullName>
    <description>Account HQ and other locations</description>
    <inlineHelpText>Account HQ and other locations</inlineHelpText>
    <label>HQ and Locations</label>
    <type>TextArea</type>
</CustomField>