unpackaged/main/default/objects/Account/fields/Ledger__c.field-meta.xml
<CustomField>
    <fullName>Ledger__c</fullName>
    <formula>Text(Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>to be deleted. No longer used</inlineHelpText>
    <label>z_Ledger</label>
    <type>Text</type>
</CustomField>