unpackaged/main/default/objects/Account/fields/Liquidated_Closed__c.field-meta.xml
<CustomField>
    <fullName>Liquidated_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liquidated/Closed</label>
    <type>Checkbox</type>
</CustomField>