unpackaged/main/default/objects/Account/fields/Number_of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Opportunities__c</fullName>
    <description>Number of Total Opportunities for all stages</description>
    <inlineHelpText>Number of Total Opportunities for all stages</inlineHelpText>
    <label>Number of Opportunities</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>