unpackaged/main/default/objects/Account/fields/Number_of_Products_Own__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Products_Own__c</fullName>
    <description>Roll Up summary from PCSM</description>
    <label>Number of Products Own</label>
    <summaryFilterItems>
        <field>PCSM_Visit_Cyc__c.Product__c</field>
        <operation>notEqual</operation>
        <value>TechnologyOne Breakout Packs, TechnologyOne PLUS, TechnologyOne Services Only, TechnologyOne Solution Template</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>PCSM_Visit_Cyc__c.Product_Cancelled__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>PCSM_Visit_Cyc__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>