unpackaged/main/default/objects/Account/fields/Old_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Old_Account_Code__c</fullName>
    <inlineHelpText>Old Account Code used before Oct 15, 2015.</inlineHelpText>
    <label>Old Account Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>