unpackaged/main/default/objects/Account/fields/Organisation_Support_Key__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Support_Key__c</fullName>
    <formula>IF( ISBLANK(Organisation_Support_Key_Suffix__c) || ISNULL(Organisation_Support_Key_Suffix__c),  Id, Id + Organisation_Support_Key_Suffix__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organisation Support Key</label>
    <type>Text</type>
</CustomField>