unpackaged/main/default/objects/Account/fields/Organisation_Support_Key_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Support_Key_Suffix__c</fullName>
    <description>Optional 10 character alphanumeric field that is appended to the Account ID to form the unique Support Key</description>
    <inlineHelpText>Optional 10 character alphanumeric field that is appended to the Account ID to form the unique Support Key.</inlineHelpText>
    <label>Organisation Support Key Suffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>