unpackaged/main/default/objects/Account/fields/Other_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Address_Type__c</fullName>
    <label>Other Address Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>