unpackaged/main/default/objects/Account/fields/Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Id__c</fullName>
    <formula>Owner.Id</formula>
    <label>Owner Id</label>
    <type>Text</type>
</CustomField>