unpackaged/main/default/objects/Account/fields/Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Owner_Title__c</fullName>
    <formula>Owner.Title</formula>
    <label>Owner Title</label>
    <type>Text</type>
</CustomField>