unpackaged/main/default/objects/Account/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <label>Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contracted Pricing from the Parent</fullName>
            </value>
            <value>
                <fullName>No Contracted Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>