unpackaged/main/default/objects/Account/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>IMAGE(
CASE( Rating , &quot;A&quot;, &quot;/resource/stars_5&quot;, &quot;B&quot;, &quot;/resource/stars_4&quot;, 
&quot;C&quot;, &quot;/resource/stars_3&quot;,&quot;D&quot;, &quot;/resource/stars_2&quot;,&quot;&quot;),&quot;&quot;,20,100)</formula>
    <label>z_Priority</label>
    <type>Text</type>
</CustomField>