unpackaged/main/default/objects/Account/fields/Product_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Last_Modified_Date__c</fullName>
    <label>Product Last Modified Date</label>
    <summarizedField>PCSM_Visit_Cyc__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>PCSM_Visit_Cyc__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>